--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,33 +7,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/login_horizontal_margin"
+    android:paddingRight="@dimen/login_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.mayarafelix.mypantry.LoginActivity">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:text="@string/login_title"
-        android:layout_marginBottom="16dp"
-        />
 
     <EditText
         android:id="@+id/actLoginEdtEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
         android:hint="@string/hint_email"
-        android:inputType="textEmailSubject"/>
+        android:inputType="textEmailSubject"
+        android:drawableStart="@drawable/ic_email_24dp"
+        android:drawablePadding="8dp"/>
 
     <EditText
         android:id="@+id/actLoginEdtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:hint="@string/hint_password"
-        android:inputType="textPassword"/>
+        android:drawableStart="@drawable/ic_lock_24dp"
+        android:inputType="textPassword"
+        android:drawablePadding="8dp"/>
 
     <Button
         android:id="@+id/actLoginBtnLogin"
@@ -41,19 +38,33 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_login"/>
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="#000000"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp" />
-
-
-    <Button
-        android:id="@+id/actLoginBtnCreateAcc"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_create_acc"/>
+        android:layout_height="20dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="#000000"
+            android:layout_weight="2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="OR"
+            android:gravity="center"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="#000000"
+            android:layout_weight="2" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,18 +73,65 @@
 
         <Button
             android:id="@+id/actLoginBtnLoginGoogle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="1dp"
             android:layout_weight="1"
-            android:text="@string/btn_login_google"/>
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:drawablePadding="10dp"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_google"
+            android:text="Google"
+            android:textColor="@android:color/white"
+            android:background="@color/colorGoogle"
+            android:layout_marginEnd="8dp"/>
 
         <Button
             android:id="@+id/actLoginBtnLoginFacebook"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="1dp"
             android:layout_height="wrap_content"
-            android:text="@string/btn_login_facebook"/>
+            android:layout_weight="1"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:drawablePadding="10dp"
+            android:background="@color/colorFacebook"
+            android:textColor="@android:color/white"
+            android:text="Facebook"
+            android:drawableStart="@drawable/ic_facebook"/>
 
     </LinearLayout>
+
+        <!--<Button-->
+            <!--android:id="@+id/actLoginBtnLoginGoogle"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:paddingStart="20dp"-->
+            <!--android:paddingEnd="20dp"-->
+            <!--android:drawablePadding="10dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:drawableStart="@drawable/ic_google"-->
+            <!--android:text="@string/btn_login_google"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:background="@color/colorGoogle"-->
+            <!--android:layout_marginBottom="8dp"/>-->
+
+        <!--<Button-->
+            <!--android:id="@+id/actLoginBtnLoginFacebook"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingStart="20dp"-->
+            <!--android:paddingEnd="20dp"-->
+            <!--android:drawablePadding="10dp"-->
+            <!--android:background="@color/colorFacebook"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:text="@string/btn_login_facebook"-->
+            <!--android:drawableStart="@drawable/ic_facebook"/>-->
+
+    <TextView
+        android:id="@+id/actLoginTxtSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_up_text"
+        android:layout_gravity="end"
+        android:layout_marginTop="16dp"
+        android:autoLink="all" />
 
 </LinearLayout>
