--- a/app/src/main/res/layout/card_category.xml
+++ b/app/src/main/res/layout/card_category.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/card_category_height">
+    android:layout_height="@dimen/card_category_height"
+    android:layout_marginBottom="1dp">
 
     <TextView
         android:id="@+id/cardCategoryName"
