--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,4 +12,12 @@
         android:orderInCategory="1"
         android:title="Add"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_save"
+        android:icon="@drawable/ic_save_white"
+        android:orderInCategory="2"
+        android:visible="false"
+        android:title="Save"
+        app:showAsAction="always" />
 </menu>
